2003-03-15  John Levon  <levon@movementarian.org>

	* QMathDialog.C: "Sans serif" not "San serif"

2003-03-15  John Levon  <levon@movementarian.org>

	* ui/QMathDialogBase.ui: fix english in a tooltip

2003-03-15  John Levon  <levon@movementarian.org>

	* ui/QRefDialogBase.ui: s/Goto/Go to reference/

2003-03-12  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* QParagraph.C (apply): do not reset vfill spacing to 'none' when
	there is no explicit length given (off by one typo)

2003-03-13  Angus Leeming  <leeming@lyx.org>

	* Dialogs.C:
	* Dialogs2.C:
	* Dialogs_impl.h: remove paragraph dialog.

	* Dialogs3.C: addparagraph  dialog.

	* QParagraph.[Ch]: changes to use the new Dialog-based scheme.

2003-03-12  John Levon  <levon@movementarian.org>

	* ui/QPrefsDialogBase.ui: resizing improvement

2003-03-12  Angus Leeming  <leeming@lyx.org>

	* Dialogs.C:
	* Dialogs2.C:
	* Dialogs_impl.h: remove character dialog.

	* Dialogs3.C: add character dialog.

	* QCharacter.[Ch]: changes to use the new Dialog-based scheme.


2003-03-12  John Levon  <levon@movementarian.org>

	* QSearch.C: don't disable checkboxes on RO doc (bug 937)
 
2003-03-10  Angus Leeming  <leeming@lyx.org>

	* Dialogs3.C (build): the "tabularcreate" dialog is always valid.
	Use IgnorantPolicy for thr B.C.

2003-03-09  Angus Leeming  <leeming@lyx.org>

	* lots of files: changes associated with the clean-up of the
	ButtonController.

2003-03-09  Angus Leeming  <leeming@lyx.org>

	* Dialogs.C:
	* Dialogs2.C:
	* Dialogs_impl.h: remove merge changes dialog.

	* Dialogs3.C: add merge changes dialog.

	* QChanges.[Ch]: changes to use the new Dialog-based scheme.

2003-03-09  Angus Leeming  <leeming@lyx.org>

	* Dialogs.C:
	* Dialogs2.C:
	* Dialogs_impl.h: remove about lyx dialog.

	* Dialogs3.C: add about lyx dialog.

	* QAbout.[Ch]: changes to use the new Dialog-based scheme.

2003-03-09  Angus Leeming  <leeming@lyx.org>

	* Dialogs.C:
	* Dialogs2.C:
	* Dialogs_impl.h: remove tabularcreate dialog.
