@@ -1,3 +1,7 @@
+2003-03-21  John Levon  <levon@movementarian.org>
+
+	* QDocument.C: fix swapping of TOC and secnum depth
+
 2003-03-15  John Levon  <levon@movementarian.org>
 
 	* QMathDialog.C: "Sans serif" not "San serif"
